fix overflow movies

--- a/client/src/containers/Home/MoviesContainer/CardMovie/CardMovie.module.css
+++ b/client/src/containers/Home/MoviesContainer/CardMovie/CardMovie.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   width: 220px;
-  height: 150px;
+  min-height: 150px;
   padding: 10px;
   border-radius: 5px;
   background-repeat: no-repeat;
