--- a/client/src/containers/Home/MoviesContainer/MoviesContainer.module.css
+++ b/client/src/containers/Home/MoviesContainer/MoviesContainer.module.css
@@ -7,7 +7,6 @@
   height: 100%;
   max-height: 730px;
   margin-top: 50px;
-  overflow-y: auto;
   padding: 10px;
   box-sizing: border-box;
   background: #00000044;
@@ -16,5 +15,9 @@
 .movies {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  overflow-y: auto;
   gap: 20px;
+  width: 260px;
+  height: 700px;
 }
